# the-oligarchy

contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: GameStore.sol  LandGenesis.sol  MockMantleETH.sol  OligarchyToken.sol  OligarchyVoter.sol  RegionFarmDynamic.sol  RegionPolitics.sol  VeOligarchy.sol  WarTheater.sol
contracts/contracts/interfaces/: ILandGenesis.sol  IOligarchyVoter.sol  IVeOligarchy.sol
contracts/ignition/modules/: Oligarchy.ts
contracts/test/: LandGenesis.test.ts  Oligarchy.test.ts  RegionPolitics.test.ts  TestAllCase.test.ts
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.jsx  ContractAddr.jsx  main.jsx  wagmi.js
front-end/src/ABI/: GameStoreABI.json  IMintableTokenABI.json  IOligarchyVoterABI.json  IVeOligarchyABI.json  MockMantleETHABI.json  OligarchyTokenABI.json  OligarchyVoterABI.json  RegionFarmDynamicABI.json  VeOligarchyABI.json  WarTheaterABI.json
front-end/src/components/: ConnectWallet.jsx  Modal.jsx  Navbar.jsx
front-end/src/game/: config.js
front-end/src/hooks/: useContracts.js  useEpoch.js
front-end/src/pages/: BribePage.jsx  DevSimulatorPage.jsx  FarmPage.jsx  LandingPage.jsx  (+4 more)
server/: Cargo.toml
server/migrations/: 20251219121236_phase1_oligarchy.sql
server/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
server/src/handlers/: mod.rs  ws.rs
server/src/indexer/: contract.rs  listener.rs  mod.rs
server/src/models/: game.rs  mod.rs  user.rs
server/src/repositories/: mod.rs  user_repo.rs
server/src/utils/: jwt.rs
(+31 files in other folders)
